--- a/apptopbar/src/main/res/layout/topbar.xml
+++ b/apptopbar/src/main/res/layout/topbar.xml
@@ -6,7 +6,7 @@
     <RelativeLayout
         android:id="@+id/view_top_bar"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_height="50dp"
         android:background="@color/black">
 
         <RelativeLayout
@@ -35,6 +35,7 @@
                 android:layout_height="match_parent">
 
                 <ImageView
+                    android:src="@drawable/svg_left_white_40dp"
                     android:id="@+id/iv_left"
                     android:layout_width="15dp"
                     android:layout_height="15dp"
@@ -45,14 +46,14 @@
                 android:layout_marginLeft="5dp"
                 android:id="@+id/view_tv_left"
                 android:layout_width="wrap_content"
-                android:layout_height="match_parent"
-                android:layout_centerInParent="true">
+                android:layout_height="match_parent">
 
                 <TextView
+                    android:text="@string/left"
                     android:id="@+id/tv_left"
                     android:layout_width="wrap_content"
-                    android:layout_height="match_parent"
-                    android:layout_alignParentLeft="true"
+                    android:layout_height="wrap_content"
+                    android:layout_centerInParent="true"
                     android:gravity="center"
                     android:textColor="@color/white"
                     android:textSize="12sp" />
@@ -73,16 +74,15 @@
             <RelativeLayout
                 android:id="@+id/view_tv_title"
                 android:layout_width="wrap_content"
-                android:layout_height="match_parent"
-                android:layout_centerInParent="true">
+                android:layout_height="match_parent">
 
                 <TextView
+                    android:text="@string/title"
                     android:id="@+id/tv_title"
                     android:layout_width="wrap_content"
-                    android:layout_height="match_parent"
+                    android:layout_height="wrap_content"
                     android:layout_centerInParent="true"
                     android:gravity="center"
-                    android:padding="5dp"
                     android:textColor="@color/white"
                     android:textSize="14sp"
                     android:textStyle="bold" />
@@ -92,10 +92,10 @@
                 android:layout_marginLeft="5dp"
                 android:id="@+id/view_iv_title"
                 android:layout_width="wrap_content"
-                android:layout_height="match_parent"
-                android:layout_centerInParent="true">
+                android:layout_height="match_parent">
 
                 <ImageView
+                 android:background="@color/white"
                     android:id="@+id/iv_title"
                     android:layout_width="20dp"
                     android:layout_height="20dp"
@@ -116,13 +116,13 @@
             <RelativeLayout
                 android:id="@+id/view_tv_right"
                 android:layout_width="wrap_content"
-                android:layout_height="match_parent"
-                android:layout_centerInParent="true">
+                android:layout_height="match_parent">
 
                 <TextView
+                    android:text="@string/right"
                     android:id="@+id/tv_right"
                     android:layout_width="wrap_content"
-                    android:layout_height="match_parent"
+                    android:layout_height="wrap_content"
                     android:layout_centerInParent="true"
                     android:gravity="center"
                     android:textColor="@color/white"
@@ -131,13 +131,13 @@
 
             <RelativeLayout
                 android:layout_marginLeft="5dp"
-                android:visibility="gone"
+                android:visibility="visible"
                 android:id="@+id/view_iv_right"
                 android:layout_width="wrap_content"
-                android:layout_height="match_parent"
-                android:layout_centerInParent="true">
+                android:layout_height="match_parent">
 
                 <ImageView
+                    android:background="@color/white"
                     android:id="@+id/iv_right"
                     android:layout_width="15dp"
                     android:layout_height="15dp"
