--- a/apptopbar/src/main/res/layout/topbar.xml
+++ b/apptopbar/src/main/res/layout/topbar.xml
@@ -6,7 +6,7 @@
     <RelativeLayout
         android:id="@+id/view_top_bar"
         android:layout_width="match_parent"
-        android:layout_height="50dp"
+        android:layout_height="wrap_content"
         android:background="@color/black">
 
         <RelativeLayout
